# flourisha-00_ai_brain

./: .env.example  .flourisha-config  .gitignore  QUICK_REFERENCE.md  README.md  requirements.txt
agents/: __init__.py  content_processor.py  document_processor.py  entity_matcher.py  models.py
api/: .clickup_project.json  README.md  config.py  content.py  main.py  projects.py  pyproject.toml  youtube.py
api/middleware/: __init__.py  auth.py  exceptions.py  rate_limit.py  timing.py
api/models/: __init__.py  a2a.py  agents.py  billing.py  chrome_extension.py  clickup.py  context_card.py  crons.py  documents.py  group.py  hedra.py  ingestion.py  integrations.py  invitation.py  memory.py  migrations.py  mobile_app.py  nango.py  personality_profile.py  profile.py  reports.py  response.py  search.py  skills_db.py  transcript.py  webhooks.py  workspace.py  youtube.py
api/routers/: __init__.py  a2a.py  agents.py  billing.py  chrome_extension.py  clickup.py  context_card.py  crons.py  documents.py  energy.py  fabric.py  feedback.py  gmail.py  graph.py  groups.py  health_dashboard.py  hedra.py  ingestion.py  integrations.py  invitations.py  memory.py  migrations.py  mobile_app.py  nango.py  okrs.py  para.py  personality_profile.py  profile.py  queue.py  reports.py  roadmap.py  search.py  skills.py  skills_db.py  sync.py  transcript.py  voice.py  webhooks.py  workspace.py  youtube.py
auth/: firebase_auth.py  middleware.py
backend/: main.py
config/: youtube_playlist_templates.json
context/: MASTER_CONTEXT.md
data/: properties.json
database/: 02_add_embeddings.sql  (+1 more)
(+727 files in other folders)
