[project]
name = "flourisha-api"
version = "0.1.0"
description = "Flourisha AI Brain REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "firebase-admin>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    "supabase>=2.0.0",
    "email-validator>=2.3.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
